--- a/web/faq.html
+++ b/web/faq.html
@@ -123,14 +123,14 @@ permalink: "{{ page.filePathStem }}.html"
     <div class="tab-content">
         <div class="tab-pane active" id="scala_1">
             <div class="code" style="text-align: left;">
-    <pre class="prettyprint lang-bash"><code>
+    <pre class="prettyprint lang-sh"><code>
     bin/smile -Djava.awt.headless=true
     </code></pre>
             </div>
         </div>
         <div class="tab-pane" id="java_1">
             <div class="code" style="text-align: left;">
-    <pre class="prettyprint lang-bash"><code>
+    <pre class="prettyprint lang-sh"><code>
     bin/jshell.sh -R-Djava.awt.headless=true
     </code></pre>
             </div>
